# lima

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  Caddyfile  Makefile  README.md  USE_CASES.md  VERSIONS.md  docker-compose.dev.yml  docker-compose.yml  init-data.sh  n8n.Dockerfile
docs/: MCP_SETUP.md  PRD-meeting-workflow.md  PRD-voice-memo-workflow.md  audio-processing-guide.md  benchmarks.md  customizing-your-ai.md  demo-voice-memo.md  index.md  (+8 more)
finetune/: .gitignore  README.md  build_stt_eval.py  carve_qmsum.py  claude_teacher.py  extraction_task.py  generate_synthetic.py  label_teacher.py  llm.py  make_splits.py  merge_adapter.py  normalize_labels.py  pyproject.toml  seeds.py  train_qlora.py  verify_template.py
finetune/corpus/: eval_real.jsonl  labeled_real.jsonl  labeled_real_claude.jsonl  labeled_real_claude_opus.jsonl  labeled_real_normalized.jsonl  labeled_synthetic.jsonl  labeled_synthetic_claude.jsonl  labeled_synthetic_claude_opus.jsonl  labeled_synthetic_normalized.jsonl  real_chunks.jsonl  split_manifest.json  synthetic_memos.jsonl  train.jsonl  train_pool_real.jsonl  val.jsonl
finetune/corpus/claude/: train.jsonl  val.jsonl
finetune/corpus/claude-opus/: train.jsonl  val.jsonl
finetune/corpus/eval/: eval_boundary_garbled.jsonl  eval_stt_voice_notes.jsonl
scripts/: benchmark_extraction.py  benchmark_whisper.py  judge_extraction.py  n8n-import-workflow.py  prepare-credential.py  pyproject.toml  seed.py  setup-env.py  setup.py  system_info.py  whisper-native.py
scripts/benchmark_results/: benchmark_20251210_012209.json  benchmark_20251210_013455.json  benchmark_20251210_014727.json  benchmark_20251210_020104.json  extraction_20260705_030203.json  extraction_20260705_031331.json  extraction_20260705_031755.json  extraction_20260705_042355.json  extraction_20260705_133716.json  extraction_20260705_162100.json  extraction_20260705_184810.json  extraction_api_20260705_162018.json  extraction_api_opus_sync.json  extraction_api_sonnet_early.json  extraction_baselines_m1.json  extraction_judged_20260705_033305.json  extraction_judged_20260705_044004.json  extraction_judged_20260705_134640.json  extraction_judged_20260705_153147.json  extraction_judged_20260705_162914.json  extraction_judged_20260705_163354.json  extraction_judged_20260705_190023.json  judge_reference.json
services/whisper-mlx/: README.md  pyproject-linux.toml  pyproject.toml  run_server.ps1  run_server.sh  server.py  server_cuda.py  server_mlx.py
services/whisper-server/: README.md  pyproject.toml  run_server.ps1  run_server.sh  server_cuda.py  server_mlx.py
(+16 files in other folders)
