[project]
name = "lima-finetune"
version = "0.1.0"
description = "LIMA extraction distillation — corpus pipeline + QLoRA training env"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=2.6",
    "transformers>=4.51",
    "peft>=0.15",
    "bitsandbytes>=0.45",
    "accelerate>=1.3",
    "requests>=2.32",
]
