[project]
name = "lima-benchmarks"
version = "0.1.0"
description = "Benchmark scripts for LIMA Whisper servers"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "mutagen>=1.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
benchmark-whisper = "benchmark_whisper:main"
system-info = "system_info:main"
